--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "mn83:4.12": "Ich habe menschliche Freuden genossen. ",
   "mn83:4.13": "Nun ist es an der Zeit, dass ich mich um himmlische Freuden bemühe. ",
   "mn83:4.14": "Komm, lieber Prinz, herrsche über das Reich! ",
-  "mn83:4.15": "Ich werde mir Haar und Bart rasieren, ockerfarbene Roben anlegen und aus dem Haus fortziehen ins hauslose Leben. "
+  "mn83:4.15": "Ich werde mir Haar und Bart rasieren, ockerfarbene Roben anlegen und aus dem Haus fortziehen ins hauslose Leben. ",
+  "mn83:4.16": "Denn, lieber Prinz, auch du wirst eines Tages graue Haare auf deinem Kopf wachsen sehen. Wenn das geschieht, sollst du, nachdem du den Kronprinzen sorgfältig ins Königtum eingewiesen hast, dir Haar und Bart rasieren, ockerfarbene Roben anlegen und aus dem Haus fortziehen ins hauslose Leben. "
 }
