--- a/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn83_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "mn83:4.16": "Denn, lieber Prinz, auch du wirst eines Tages graue Haare auf deinem Kopf wachsen sehen. Wenn das geschieht, sollst du, nachdem du dem Barbier ein Beute-Dorf gegeben und den Kronprinzen sorgfältig ins Königtum eingewiesen hast, dir Haar und Bart rasieren, ockerfarbene Roben anlegen und aus dem Haus fortziehen ins hauslose Leben. ",
   "mn83:4.17": "Führe diesen guten Brauch fort, den ich begründet habe. Sei nicht mein letzter Mann. ",
   "mn83:4.18": "Wenn ein Paar von Männern lebt, so ist derjenige, der so einen guten Brauch abbricht, ihr letzter Mann. ",
-  "mn83:4.19": "Daher sage ich zu dir: "
+  "mn83:4.19": "Daher sage ich zu dir: ",
+  "mn83:4.20": "„Führe diesen guten Brauch fort, den ich begründet habe. Sei nicht mein letzter Mann.“‘ "
 }
