--- a/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
@@ -17,7 +17,7 @@
   "mn108:4.7": "Perfavore, Signore, si sieda, il posto è pronto”. ",
   "mn108:4.8": "Il Venerabile Ānanda si sedette sul posto preparato, ",
   "mn108:4.9": "mentre Moggallāna prese un posto più basso e si sedette a lato. ",
-  "mn108:4.10": "Poi disse ad Ānanda: ",
+  "mn108:4.10": "Poi disse al Venerabile Ānanda: ",
   "mn108:5.1": "“Signor Ānanda, c’è anche un solo monaco che possiede tutte le stesse qualità in ogni modo che il Signor Gotama, il perfetto, il Buddha completamente risvegliato possedeva?” ",
   "mn108:5.2": "“No, bramino, non c’è. ",
   "mn108:5.3": "Poiché il Beato diede origine al percorso inoriginato, diede alla luce il percorso non nato, e spiegò il percorso inspiegato. È il conoscitore del percorso, lo scopritore del percorso, l’esperto sul percorso. ",
