--- a/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
@@ -26,7 +26,7 @@
   "mn108:6.2": "Poiché in quel momento il bramino Vassakāra, un ministro di Maghada, mentre supervisionava il lavoro a Rājagaha, andò dal Venerabile Ānanda dove Moggallāna lavorava e ci scambiò saluti. ",
   "mn108:6.3": "Una volta che i saluti e le cordialità terminarono, si sedette a lato e disse al Venerabile Ānanda: ",
   "mn108:6.4": "“Signor Ānanda, di cosa stavate parlando mentre eravate seduti proprio ora? Che conversazione è stata interrotta?” ",
-  "mn108:6.5": "Allora Ānanda gli riferì la conversazione che stavano facendo prima che Vassakāra arrivasse. Vassakāra disse: ",
+  "mn108:6.5": "Allora il Venerabile Ānanda gli riferì la conversazione che stavano facendo prima che Vassakāra arrivasse. Vassakāra disse: ",
   "mn108:7.1": "“Signor Ānanda, c’è anche un solo monaco che è stato nominato dal Signor Gotama dicendo: ",
   "mn108:7.2": "‘Questo sarà il vostro rifugio quando io non ci sarò più’, a cui vi rivolgereste?” ",
   "mn108:7.3": "“No, non c’è” ",
