--- a/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
@@ -70,7 +70,7 @@
   "mn108:19.1": "Con chiarudienza purificata e sovrumana, sente entrambi i tipi di suoni, umani e divini, sia vicini che lontani. ",
   "mn108:20.1": "Comprende le menti degli altri esseri e individui, avendole lette con la propria mente. ",
   "mn108:20.2": "Comprende una mente con febbre per il piacere come ‘mente con febbre per il piacere,’ ",
-  "mn108:20.3": "e una mente senza febbre per il piacere come “mente senza febbre per il piacere”; ",
+  "mn108:20.3": "e la mente senza febbre per il piacere come ‘mente senza febbre per il piacere’. ",
   "mn108:20.4": "Comprende una mente con odio come “mente con odio”, ",
   "mn108:20.5": "e una mente senza odio come “mente senza odio”; ",
   "mn108:20.6": "una mente con illusione come “mente con illusione”, ",
