--- a/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
@@ -72,7 +72,7 @@
   "mn108:20.2": "Comprende la mente con febbre per il piacere come ‘mente con febbre per il piacere,’ ",
   "mn108:20.3": "e la mente senza febbre per il piacere come ‘mente senza febbre per il piacere’. ",
   "mn108:20.4": "Comprende la mente con odio come ‘mente con odio,’ ",
-  "mn108:20.5": "e una mente senza odio come “mente senza odio”; ",
+  "mn108:20.5": "e la mente senza odio come ‘mente senza odio.’ ",
   "mn108:20.6": "una mente con illusione come “mente con illusione”, ",
   "mn108:20.7": "e una mente senza illusione come “mente senza illusione”; ",
   "mn108:20.8": "una mente ristretta come ‘mente ristretta’, ",
