--- a/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
@@ -76,7 +76,7 @@
   "mn108:20.6": "Comprende la mente con illusione come ‘mente con illusione,’ ",
   "mn108:20.7": "e la mente senza illusione come ‘mente senza illusione.’ ",
   "mn108:20.8": "Comprende la mente ristretta come ‘mente ristretta,’ ",
-  "mn108:20.9": "e una mente sparpagliata come “mente sparpagliata”; ",
+  "mn108:20.9": "e la mente sparpagliata come ‘mente sparpagliata.’ ",
   "mn108:20.10": "una mente espansiva come “mente espansiva”, ",
   "mn108:20.11": "e una mente non espansiva come “mente non espansiva”; ",
   "mn108:20.12": "una mente non suprema come “mente non suprema”, ",
