--- a/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn108_translation-it-giovannizappa.json
@@ -79,7 +79,7 @@
   "mn108:20.9": "e la mente sparpagliata come ‘mente sparpagliata.’ ",
   "mn108:20.10": "Comprende la mente espansiva come ‘mente espansiva,’ ",
   "mn108:20.11": "e la mente non espansiva come ‘mente non espansiva.’ ",
-  "mn108:20.12": "una mente non suprema come “mente non suprema”, ",
+  "mn108:20.12": "Comprende la mente non suprema come ‘mente non suprema,’ ",
   "mn108:20.13": "e una mente suprema come ‘mente suprema’; ",
   "mn108:20.14": "una mente concentrata come “mente concentrata”, ",
   "mn108:20.15": "e una mente non concentrata come “mente non concentrata”; ",
