--- a/translation/it/giovannizappa/sutta/mn/mn109_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn109_translation-it-giovannizappa.json
@@ -20,7 +20,7 @@
   "mn109:7.1": "“Ma, Signore, possono esserci vari tipi diversi di desiderio e avidità per i cinque agglomerati di attaccamento?” ",
   "mn109:7.2": "“Può esserci, monaco”, disse il Buddha. ",
   "mn109:7.3": "“È quando qualcuno pensa: ",
-  "mn109:7.4": "‘In futuro, che io abbia un corpo così, sensazioni così, percezione così, intenzioni così, e coscienza così!’ ",
+  "mn109:7.4": "‘In futuro, che io abbia una figura così, sensazioni così, percezione così, intenzioni così, e coscienza così!’ ",
   "mn109:7.5": "È così che possono esserci vari tipi diversi di desiderio e avidità per i cinque agglomerati di attaccamento” ",
   "mn109:8.1": "“Signore, qual è la portata del temine ‘agglomerati’ per quanto riguarda gli agglomerati?” ",
   "mn109:8.2": "“Qualsiasi tipo di corpo in assoluto, passato, futuro, o presente; interno o esterno; grossolano o raffinato; inferiore o superiore; lontano o vicino: questo si chiama l’aggregato del corpo. ",
