--- a/translation/it/giovannizappa/sutta/mn/mn109_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn109_translation-it-giovannizappa.json
@@ -18,7 +18,7 @@
   "mn109:6.2": "“Nessuno dei due. ",
   "mn109:6.3": "Il desiderio e l’avidità per i cinque agglomerati di attaccamento è l’attaccamento presente lì” ",
   "mn109:7.1": "“Ma, Signore, possono esserci vari tipi diversi di desiderio e avidità per i cinque agglomerati di attaccamento?” ",
-  "mn109:7.2": "“Può esserci, monaco”, disse il Buddha. ",
+  "mn109:7.2": "“Possono esserci, monaco”, disse il Buddha. ",
   "mn109:7.3": "“È quando qualcuno pensa: ",
   "mn109:7.4": "‘In futuro, che io abbia una figura così, sensazioni così, percezione così, intenzioni così, e coscienza così!’ ",
   "mn109:7.5": "È così che possono esserci vari tipi diversi di desiderio e avidità per i cinque agglomerati di attaccamento” ",
