--- a/translation/it/giovannizappa/sutta/mn/mn109_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn109_translation-it-giovannizappa.json
@@ -46,7 +46,7 @@
   "mn109:10.5": "Ritiene la percezione come il Sé, o che il Sé abbia percezione, o che la percezione sia parte del Sé, o il Sé della percezione. ",
   "mn109:10.6": "Ritiene le intenzioni come il Sé, o che il Sé abbia intenzioni, o che le intenzioni siano parte del Sé, o il Sé delle intenzioni. ",
   "mn109:10.7": "Ritiene la coscienza come il Sé, o che il Sé abbia coscienza, o che la coscienza sia parte del Sé, o il Sé della coscienza. ",
-  "mn109:10.8": "È così il sostanzialismo viene in essere” ",
+  "mn109:10.8": "È così che il sostanzialismo viene in essere” ",
   "mn109:11.1": "“Ma, Signore, com’è che non viene in essere il sostanzialismo?” ",
   "mn109:11.2": "“È quando un discepolo nobile colto ha visto i nobili, ed è abile e addestrato all’insegnamento nobile. Ha visto veri uomini, ed è abile e addestrato all’insegnamento dei veri uomini. ",
   "mn109:11.3": "Non ritiene la figura come il Sé, o che il Sé abbia figura, o che la figura sia parte del Sé, o il Sé della figura. ",
