--- a/translation/it/giovannizappa/sutta/mn/mn109_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn109_translation-it-giovannizappa.json
@@ -54,7 +54,7 @@
   "mn109:11.5": "Non ritiene la percezione come il Sé, o che il Sé abbia percezione, o che la percezione sia parte del Sé, o il Sé della percezione. ",
   "mn109:11.6": "Non ritiene le intenzioni come il Sé, o che il Sé abbia intenzioni, o che le intenzioni siano parte del Sé, o il Sé delle intenzioni. ",
   "mn109:11.7": "Non ritiene la coscienza come il Sé, o che il Sé abbia coscienza, o che la coscienza sia parte del Sé, o il Sé della coscienza. ",
-  "mn109:11.8": "È così il sostanzialismo non viene in essere” ",
+  "mn109:11.8": "È così che il sostanzialismo non viene in essere” ",
   "mn109:12.1": "“Signore, qual è la gratificazione, lo svantaggio, e la fuga per quanto riguarda il corpo, ",
   "mn109:12.2": "le sensazioni, ",
   "mn109:12.3": "la percezione, ",
