--- a/translation/it/giovannizappa/sutta/mn/mn109_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn109_translation-it-giovannizappa.json
@@ -61,7 +61,7 @@
   "mn109:12.4": "le intenzioni, ",
   "mn109:12.5": "e la coscienza?” ",
   "mn109:12.6": "“La felicità e l’allegria che sorgono dalla figura: questa è la gratificazione della figura. ",
-  "mn109:12.7": "Il fatto che il corpo è impermanente, insoddisfacente, e deperibile: questo è lo svantaggio del corpo. ",
+  "mn109:12.7": "Il fatto che la figura è impermanente, insoddisfacente, e deperibile: questo è lo svantaggio del corpo. ",
   "mn109:12.8": "Domare e rimuovere la febbre e l’appetito per il corpo: questa è la fuga dal corpo. ",
   "mn109:12.9": "La felicità e l’allegria che sorgono dalle sensazioni … ",
   "mn109:12.10": "dalla percezione … ",
