--- a/translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti99:4.2": "Questa è la seconda conoscenza acquisita: l’ignoranza è annientata, la conoscenza sorta, l’oscurità annientata, la luce sorta, come accade a chi è/pratica solerte, ardente e risoluto. ** ",
   "iti99:5.1": "E poi, grazie all’eliminazione delle compulsioni (āsava), un cercatore arriva e rimane nella liberazione del cuore priva di compulsioni, nella liberazione attraverso la saggezza, acquisita direttamente in questa vita con la conoscenza superiore*** ",
   "iti99:5.2": "Questa è la terza conoscenza acquisita: l’ignoranza è annientata, la conoscenza sorta, l’oscurità annientata, la luce sorta, come accade a chi è/pratica solerte, ardente e risoluto. *** ",
-  "iti99:6.1": "Chiunque veda così le vite passate, ",
+  "iti99:6.1": "Chiunque conosca le vite passate, ",
   "iti99:6.2": "il paradiso e l’inferno ",
   "iti99:6.3": "e ha ottenuto la distruzione/eliminazione della rinascita, ** ",
   "iti99:6.4": "è un sapiente padrone della conoscenza superiore. ** ",
