--- a/translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti99:6.2": "e veda il paradiso e l’inferno ",
   "iti99:6.3": "e ha ottenuto la distruzione/eliminazione della rinascita, ** ",
   "iti99:6.4": "è un sapiente padrone della conoscenza superiore. ** ",
-  "iti99:7.1": "Maestro delle tre conoscenze, ",
+  "iti99:7.1": "Con queste tre conoscenze, ",
   "iti99:7.2": "è un brahmano che possiede le tre conoscenze superiori. ",
   "iti99:7.3": "Io vi dico che quello è esperto nelle tre conoscenze, ",
   "iti99:7.4": "non in base alla tradizione orale.** "
