--- a/translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti101:2.1": "Cercatori, queste quattro cose di poco conto sono facilmente reperibili e irreprensibili. ",
   "iti101:2.2": "Quali quattro? ",
   "iti101:2.3": "Scarti di stoffa per il saio... ",
-  "iti101:2.4": "Tocchi e tozzi di cibo come questua... ",
+  "iti101:2.4": "Tocchi di cibo come questua... ",
   "iti101:2.5": "Le radici degli alberi come giaciglio e dimora... ",
   "iti101:2.6": "Urina fermentata come medicina... ",
   "iti101:2.8": "Quando un cercatore è contento con poco, con quel che è facilmente reperibile e irreprensibile, io vi dico che possiede uno dei fattori della vita ascetica (contemplativa). ",
