--- a/translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json
@@ -13,7 +13,7 @@
   "iti101:3.5": "non si ha tormento (avversione) mentale, ",
   "iti101:3.6": "non si trovano impacci da nessuna parte. ",
   "iti101:4.1": "Queste qualità, che si ",
-  "iti101:4.2": "addicono alla vita contemplativa, ",
+  "iti101:4.2": "addicono alla vita ascetica (contemplativa), ",
   "iti101:4.3": "sono perfezionate da un cercatore ",
   "iti101:4.4": "contento e solerte.” "
 }
